WIP clean up and tests